--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.2.0",
+    "@material-ui/icons": "^3.0.1",
     "concurrently": "^4.0.1",
     "moment": "^2.22.2",
     "pouchdb-adapter-http": "^7.0.0",
