--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "@types/react-color": "^2.13.6",
     "concurrently": "^4.0.1",
     "moment": "^2.22.2",
     "pouchdb-adapter-http": "^7.0.0",
     "pouchdb-adapter-idb": "^7.0.0",
     "pouchdb-server": "^4.1.0",
     "react": "^16.5.2",
+    "react-color": "^2.14.1",
     "react-dom": "^16.5.2",
     "react-scripts-ts": "3.1.0",
     "react-toastify": "^4.4.0",
