--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react": "^16.5.2",
     "react-color": "^2.14.1",
     "react-dom": "^16.5.2",
+    "react-microlink": "^2.2.8",
     "react-scripts-ts": "3.1.0",
     "react-toastify": "^4.4.0",
     "rxdb": "^8.0.2",
     "rxjs": "^6.3.3",
-    "serve": "^10.0.2"
+    "serve": "^10.0.2",
+    "styled-components": "^3.4.10"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"react-scripts-ts start\"",
