--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "@reactivex/rxjs": "^6.4.0",
     "@types/react-color": "^2.13.6",
     "concurrently": "^4.0.1",
     "moment": "^2.22.2",
@@ -17,7 +18,7 @@
     "react-microlink": "^2.2.8",
     "react-scripts-ts": "3.1.0",
     "react-toastify": "^4.4.0",
-    "rxdb": "^8.0.2",
+    "rxdb": "^8.0.5",
     "rxjs": "^6.3.3",
     "serve": "^10.0.2",
     "styled-components": "^3.4.10"
