--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reactivex/rxjs": "^6.4.0",
     "@types/react-color": "^2.13.6",
     "concurrently": "^4.0.1",
+    "firebase": "^5.8.3",
     "moment": "^2.22.2",
     "pouchdb-adapter-http": "^7.0.0",
     "pouchdb-adapter-idb": "^7.0.0",
@@ -31,6 +32,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^23.3.5",
     "@types/node": "^10.11.6",
     "@types/react": "^16.4.16",
